fix green color contrast

--- a/common/common.scss
+++ b/common/common.scss
@@ -551,9 +551,9 @@ button#create-topic {
     bottom: 2em;
     right: 2em;
     z-index: 9999;
-    background: linear-gradient(128deg, rgba(24,226,179,1) 60%, rgba(0,212,255,1) 100%);
+    background: rgb(24, 226, 179);
     border-color: #17e0b2;
-    color: #2e7d32;
+    color: #263238;
     box-shadow: rgba(99,99,99,.2) 0px 2px 8px 0px;
     font-weight: bold;
 }
